--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.5",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.15.10",
     "tailwindcss": "^4.0.3"
   },
   "devDependencies": {
