--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.3",
+    "@tanstack/react-query": "^5.66.0",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "firebase": "^11.2.0",
